--- a/tidserieanalys.qmd
+++ b/tidserieanalys.qmd
@@ -51,3 +51,26 @@ För en robust och nyancerad analys kommer det framförallt används av
 Open, high och low som hjälpvariblen och Close som huvudvarible.
 Motiveringen följer, det finns en naturlig koppling mellan dessa för att
 kunna förutspå aktien closing price från ett mänskligt perpektiv.
+
+## Grafer 
+
+```{r}
+# Matrix
+dataframe <- as.matrix(dataframe[, c("Open", "High", "Low", "Close", "Volume")])
+
+microsoft_ts <- ts(dataframe, 
+               start = c(2015, 4),  
+               frequency = 365)
+```
+
+```{r}
+plot(microsoft_ts, main="")
+
+```
+
+```{r}
+plot(microsoft_ts[, "Close"], 
+     main = "Closing price over time",
+     xlab = "date",
+     ylab = "Closing price")
+```
