--- a/tidserieanalys.qmd
+++ b/tidserieanalys.qmd
@@ -138,7 +138,7 @@ rolling_forecast <- function(
 Predict på datan
 
 ```{r, message=FALSE, warning=FALSE}
-microsoft_ts_rolling <- microsoft_ts[, 1]
+microsoft_ts_rolling <- microsoft_ts[, 4]
 forecast <- rolling_forecast(
     data=microsoft_ts_rolling,
     steps_ahead = 1
@@ -160,8 +160,8 @@ Räknar ut båda RMSE och MAD
 
 ```{r}
 microsoft_ts_trimmed_last_30 <- ts(
-  microsoft_ts[1482:1511, ],       
-  start = start(microsoft_ts),         
+  microsoft_ts[1481:1511, ],       
+  start = end(microsoft_ts_trimmed),         
   frequency = frequency(microsoft_ts)  
 )
 
@@ -173,12 +173,25 @@ calc_metrics <- function(actual, predicted) {
 }
 
 
-metrics0 <- calc_metrics(actual = microsoft_ts_trimmed_last_30[,1][1:28], predicted = forecast)
+metrics0 <- calc_metrics(actual = microsoft_ts_trimmed_last_30[,4], predicted = forecast)
 metrics0
-metrics1 <- calc_metrics(actual = microsoft_ts_trimmed_last_30[,1][1:28], predicted = forecast_hS[1:28])
+metrics1 <- calc_metrics(actual = microsoft_ts_trimmed_last_30[,4], predicted = forecast_hS)
 metrics1
 ```
 
 OBS något gick fel använd 28 istället
 
 ## c) 
+
+```{r}
+alpha <- 0.05
+z <- qnorm(1 - alpha / 2)
+
+# plot
+plot(microsoft_ts_trimmed_last_30[, 4], col = "black", lwd = 2, main = "h = 1")
+#lines(forecast, col = "blue", lwd = 2)
+
+plot(microsoft_ts_trimmed_last_30[, 4], col = "black", lwd = 2, main = "h = 1")
+lines(forecast, col = "blue", lwd = 2)
+
+```
